# CookieQutter

./: .gitignore  README.md  cc_from_dxf.py  pyproject.toml
cookie_qutter/: __init__.py  from_dxf.py
tests/: test_cookiequtter.py
tests/test_files/: caused_stl_export_fail.dxf  nefarious_loop.dxf  nefarious_loop_fixed.dxf
