# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools >= 70", "wheel", "setuptools-git-versioning >= 1.13"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
exclude = ["docs*", "examples*", "research*", "tests*"]

[project]
# Determined by git tags.
dynamic = ["version"]
name = "cookie_qutter"
description = "Create 3-D printable cookie-cutters from a vector drawing with CadQuery"
readme = "README.md"
license = { file = "LICENSE" }

authors = [{ name = "Ben Hubbard", email = "brhubbar@mtu.edu" }]
maintainers = [{ name = "Ben Hubbard", email = "brhubbar@mtu.edu" }]

requires-python = ">=3.10"
dependencies = ["cadquery"]
[project.optional-dependencies]
test = ["coverage", "pytest", "ruff"]
dev = ["cookie_qutter[test]", "ipython"]

[project.urls]
Homepage = "https://pages.github.com/brhubbar/CookieQutter/"
Repository = "https://github.com/brhubbar/CookieQutter"
Issues = "https://github.com/brhubbar/CookieQutter/issues"
Changelog = "https://github.com/brhubbar/CookieQutter/blob/main/CHANGELOG.md"

[project.scripts]
cookiequtter = "cookie_qutter:entrypoint"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # Type annotations.
    "ANN",
    # Shadowing built-ins
    "A",
    # Common bugs.
    "B",
    # Complexity check.
    "C90",
    # Docstrings.
    "D",
    # Code style.
    "E",
    # Pyflakes.
    "F",
    # Logging format.
    "G",
    # Import sorting.
    "I",
    # Ruff-originals.
    "RUF",
    # Security checks.
    "S",
    # Try except linting.
    "TRY",
    # Pyflakes warnings.
    "W",
]
ignore = [
    # [flake8-annotations](https://pypi.org/project/flake8-annotations/)
    # Only warn about return type on public functions/methods.
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN202",
    # "ANN203",  # not supported by ruff.
    "ANN204",
    # "ANN301",  # not supported by ruff.
    # PEP8 is less strict about this, and even suggests not following in favor
    # of readability (emphasis by spaces).
    "E226",
    # This is an invalid requirement.
    "D203",
    # Multiline dosctrings should start on the second line. This disagrees.
    "D212",
    # __init__ docstring goes in the class docstring
    "D107",
    # This flags ValueErrors, which doesn't make sense to subclass.
    "TRY003",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
